<resources>
    <string name="app_name">StudyMentor</string>
    <string name="btRegister_LoginActivity">Registrarse</string>
    <string name="btLogin_LoginActivity">Login</string>
    <string name="etPassword_LoginActivity">Password</string>
    <string name="etEmail_LoginActivity">Email</string>
    <string name="tvLogin_LoginActivity">Login</string>
    <string name="btRegister_RegisterActivity">Registrarse</string>
    <string name="tvRegister_RegisterActivity">Register</string>
    <string name="etName_RegisterActivity">Name</string>
    <string name="etLastname_RegisterActivity">LastName</string>
    <string name="etEmail_RegisterActivity">Email</string>
    <string name="etPassword_RegisterActivity">Password</string>
    <string name="etTelefono_RegisterActivity">Telefono</string>
    <string name="etDate_RegisterActivity">month/day/year</string>
    <string name="rbFemenino_RegisterActivity">Femenino</string>
    <string name="rbMasculino_RegisterActivity">Masculino</string>
    <string name="btStudent_MainActivity">Estudiante</string>
    <string name="btTeacher_MainActivity">Profesor</string>
    <string name="ivStudent_MainActivity">TODO</string>
    <string name="ivTeacher_MainActivity">TODO</string>
    <string name="tvRol_MainActivity">Elije tu rol:</string>
    <string name="btPay_PaymentActivity">Pagar</string>
    <string name="cbSaveCardDetails_PaymentActivity">Guardar datos para futuras compras</string>
    <string name="etCVV_PaymentActivity">123</string>
    <string name="etCardHolderName_PaymentActivity">Nombre del Titular</string>
    <string name="etCardNumber_PaymentActivity">XXXX XXXX XXXX XXXX</string>
    <string name="ivCardType_PaymentActivity">TODO</string>
    <string name="ivStudyMentor_PaymentActivity">TODO</string>
    <string name="etDate_PaymentActivity">MM/YY</string>
    <string name="tvAmount_PaymentActivity">Total amount</string>
    <string name="tvCVV_PaymentActivity">CVV</string>
    <string name="tvCardHolderName_PaymentActivity">Titular de la Tarjeta</string>
    <string name="tvCardNumber_PaymentActivity">Número de Tarjeta</string>
    <string name="tvCost_PaymentActivity">TextView</string>
    <string name="tvDetails_PaymentActivity">Detalles del pago</string>
    <string name="tvExpirationDate_PaymentActivity">Fecha Venc.</string>
    <string name="tvStudymentor_PaymentActivity">StudyMentor</string>
    <string name="tvPayment_PaymentActivity">Realizar pago</string>
</resources>