<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivStudent"
        android:layout_width="192dp"
        android:layout_height="177dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRol"
        app:srcCompat="@drawable/estudiante"
        android:contentDescription="@string/ivStudent_MainActivity" />

    <TextView
        android:id="@+id/tvRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvRol_MainActivity"
        android:textColor="#263238"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTeacher"
        android:layout_width="153dp"
        android:layout_height="172dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/ivTeacher_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRol"
        app:srcCompat="@drawable/profesor"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:background="#BFB1B1"
        android:fontFamily="sans-serif"
        android:text="@string/btStudent_MainActivity"
        android:textColor="#795548"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStudent" />

    <Button
        android:id="@+id/btTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btTeacher_MainActivity"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTeacher" />
</androidx.constraintlayout.widget.ConstraintLayout>
